tests/compile-fail/type_hints.ori
// Test that type conversion hints are provided in error messages
// Spec: 06-types.md ยง Type Compatibility
// Design: 03-type-system/05-type-inference.md ยง Error Messages
//
// When type mismatches occur between convertible types, the compiler
// should suggest the appropriate conversion function.

// =============================================================================
// int <-> float conversion hints
// =============================================================================

@takes_int (x: int) -> int = x;
@takes_float (x: float) -> float = x;

// When float is passed where int is expected, suggest int(x)
#compile_fail("int(x)")
@test_float_to_int_hint tests @takes_int () -> void = {
    let result = takes_int(x: 3.14);
    ()
}

// When int is passed where float is expected, suggest float(x)
#compile_fail("float(x)")
@test_int_to_float_hint tests @takes_float () -> void = {
    let result = takes_float(x: 42);
    ()
}

// =============================================================================
// str <-> int/byte hints
// =============================================================================

@takes_str (s: str) -> str = s;
@takes_byte (b: byte) -> byte = b;

// When int is passed where str is expected, suggest str(x)
#compile_fail("str(x)")
@test_int_to_str_hint tests @takes_str () -> void = {
    let result = takes_str(s: 42);
    ()
}

// When str is passed where byte is expected (only makes sense for single chars)
#compile_fail("byte(x)")
@test_str_to_byte_hint tests @takes_byte () -> void = {
    let result = takes_byte(b: "a");
    ()
}

// =============================================================================
// List wrapping hints
// =============================================================================

@takes_list (items: [int]) -> [int] = items;

// When a plain value is passed where list is expected, suggest [x]
#compile_fail("[x]")
@test_wrap_in_list_hint tests @takes_list () -> void = {
    let result = takes_list(items: 42);
    ()
}

// =============================================================================
// Option/Result wrapping hints
// NOTE: Generic type syntax Option<T> and Result<T, E> require Phase 6
// These tests use functions that return Option/Result from literals
// =============================================================================

// Helper that returns an Option to trigger type inference
@make_option (x: int) -> int = {
    // Some returns Option<int>
    match Some(x) {
        Some(n) -> n,
        None -> 0
    }
}

// The conversion hints for Option (Some(x)) and Result (Ok(x)/Err(x))
// are implemented in the type checker. They will be tested when
// generic type syntax is available in Phase 6.
